@@ -4,3 +4,9 @@ complete change log
 # These are notes for the current version of APBS
 * Added tools/matlab/solver with simple Matlab LPBE solver for prototyping,
 teaching, etc.
+
+# BUGFIXES
+* Added in warning into focusFillBound if there is a large value detected
+  in setting the boundary conditions during a focusing calculation
+* Added in a check and abort in Vpmg_qmEnergy if chopped values are
+  detected. This seems to occur under certain conditions for npbe calcs.
